--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,3 +26,11 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+.logo {
+	position: relative;
+	width: 300px;
+	height: 50px;
+}
+ 
